--- a/own-practice/ifElse_time.html
+++ b/own-practice/ifElse_time.html
@@ -42,14 +42,25 @@
 			break;
 		 default:
 		    console.log("Arrear");
-			
-			
-	  
-	  
-	  
 	  }  
    
    
+   // normal condition
+   
+   let age=prompt("enter your age");
+   let id=prompt("you have id");
+   
+   if(age >= 18){
+      if(id===true){
+	     console.log("eligible to vote");
+	  }
+	  else{
+	     console.log("must have id for vote");
+	  }
+   }
+   else{
+      console.log("not eligible to vote");
+   }
    
    
    
