--- a/own-practice/if_condition.html
+++ b/own-practice/if_condition.html
@@ -9,39 +9,39 @@
 <body>
    <script>
    
-   //divisible by 7
-	 let num=prompt("enter a number");
-	  if(num%7==0){
-	     document.write("divisible by 7");
-	  }
-	  else{
-	     document.write("not divisible by 7");
-	 }
-	 document.write("<br>")
-	 document.write("<br>");
+   <!-- //divisible by 7 -->
+	 <!-- let num=prompt("enter a number"); -->
+	  <!-- if(num%7==0){ -->
+	     <!-- document.write("divisible by 7"); -->
+	  <!-- } -->
+	  <!-- else{ -->
+	     <!-- document.write("not divisible by 7"); -->
+	 <!-- } -->
+	 <!-- document.write("<br>") -->
+	 <!-- document.write("<br>"); -->
    
    
-   // color
+   <!-- // color -->
    
-   let color=prompt("enter color");
-   switch(color){
-      case "red":
-	     document.write("color is red");
-		 break;
-	  case "blue":
-	     document.write("color is blue");
-		 break;
-	  case "yellow":
-	     document.write("color is yellow");
-		 break;
-	  case "white":
-	     document.write("color is white");
-		 break;
-	  default:
-	     document.write("unknown color");
-   }
-   document.write("<br>")
-   document.write("<br>")
+   <!-- let color=prompt("enter color"); -->
+   <!-- switch(color){ -->
+      <!-- case "red": -->
+	     <!-- document.write("color is red"); -->
+		 <!-- break; -->
+	  <!-- case "blue": -->
+	     <!-- document.write("color is blue"); -->
+		 <!-- break; -->
+	  <!-- case "yellow": -->
+	     <!-- document.write("color is yellow"); -->
+		 <!-- break; -->
+	  <!-- case "white": -->
+	     <!-- document.write("color is white"); -->
+		 <!-- break; -->
+	  <!-- default: -->
+	     <!-- document.write("unknown color"); -->
+   <!-- } -->
+   <!-- document.write("<br>") -->
+   <!-- document.write("<br>") -->
    
    // nested if
    
@@ -50,7 +50,7 @@
    
    if(menAge >= 25){
       if(womanAge >=18){
-      document.write("eligible to marriage");
+      document.write("both are eligible to marriage");
 	  }
 	  else{
 	     document.write("woman is not eligible to marriage");
