--- a/own-practice/ifElse_time.html
+++ b/own-practice/ifElse_time.html
@@ -26,6 +26,24 @@
 	  }
 	  
 	  
+	   // normal condition
+   
+	   let age=prompt("enter your age");
+	   let id=true;
+	   
+	   if(age >= 18){
+		  if(id==true){
+			 console.log("eligible to vote");
+		  }
+		  else{
+			 console.log("must have id for vote...so not eligible to vote");
+		  }
+	   }
+	   else{
+		  console.log("not eligible to vote");
+	   }
+	  
+	  
 	  //switch case
 	  
 	  let grade= "O";
@@ -45,22 +63,9 @@
 	  }  
    
    
-   // normal condition
    
-   let age=prompt("enter your age");
-   let id=prompt("you have id");
    
-   if(age >= 18){
-      if(id===true){
-	     console.log("eligible to vote");
-	  }
-	  else{
-	     console.log("must have id for vote");
-	  }
-   }
-   else{
-      console.log("not eligible to vote");
-   }
+  
    
    
    
