--- a/js/task/object.html
+++ b/js/task/object.html
@@ -33,6 +33,15 @@
 	  
 	  
 	  
+	  // give object keys
+	  
+	  let per={
+	     name:"saran",
+		 age:21
+	  }
+	  for(i in person){
+	     console.log(i)
+	  }
 	  
 	  
 	  
