--- a/own-practice/review_task/if_condition.html
+++ b/own-practice/review_task/if_condition.html
@@ -103,7 +103,7 @@
      case (mark > 60 && mark <= 80):
 	    console.log("B");
 		break;
-	 case (mark > 80 && mark > 100):
+	 case (mark > 80):
 	    console.log("A");
 		break;
   }
@@ -139,6 +139,9 @@
 	     console.log("person2 is oldest and person3 is youngest")
 	  }
    }
+   
+   
+   
    
    
    
