--- a/own-practice/progress/progress.html
+++ b/own-practice/progress/progress.html
@@ -8,6 +8,7 @@
 	<title>progress</title>
 </head>
 <body>
+ <div class="col-12 col-sm-12 col-md-6 col-lg-6">
  <div class="card">
   <div class="percent">
     <svg>
@@ -22,7 +23,9 @@
     <h2>HTML</h2>
   </div>
 </div>
+</div>
 
+<div class="col-12 col-sm-12 col-md-8 col-lg-4">
 <div class="card">
   <div class="percent">
     <svg>
@@ -37,7 +40,9 @@
     <h2>CSS</h2>
   </div>
 </div>
+</div>
 
+<div class="col-12 col-sm-12 col-md-6 col-lg-6">
 <div class="card">
   <div class="percent">
     <svg>
@@ -51,6 +56,7 @@
   <div class="title">
     <h2>JavaScript</h2>
   </div>
+</div>
 </div>
 
 </body>
