--- a/own-practice/progress/progress.html
+++ b/own-practice/progress/progress.html
@@ -8,8 +8,8 @@
 	<title>progress</title>
 </head>
 <body>
- <div class="col-12 col-sm-12 col-md-6 col-lg-6">
- <div class="card">
+ 
+ <div class="card col-12 col-sm-12 col-md-6 col-lg-6">
   <div class="percent">
     <svg>
       <circle cx="105" cy="105" r="100"></circle>
@@ -23,10 +23,8 @@
     <h2>HTML</h2>
   </div>
 </div>
-</div>
 
-<div class="col-12 col-sm-12 col-md-8 col-lg-4">
-<div class="card">
+<div class="card col-12 col-sm-12 col-md-8 col-lg-4">
   <div class="percent">
     <svg>
       <circle cx="105" cy="105" r="100"></circle>
@@ -40,10 +38,8 @@
     <h2>CSS</h2>
   </div>
 </div>
-</div>
 
-<div class="col-12 col-sm-12 col-md-6 col-lg-6">
-<div class="card">
+<div class="card col-12 col-sm-12 col-md-8 col-lg-4">
   <div class="percent">
     <svg>
       <circle cx="105" cy="105" r="100"></circle>
@@ -56,7 +52,6 @@
   <div class="title">
     <h2>JavaScript</h2>
   </div>
-</div>
 </div>
 
 </body>
