--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -71,12 +71,12 @@
 		 </div>
 		 <div class="row">
 	     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-	     <div data-aos="zoom-out-down" data-aos-duration="1000" class="abtBorder">
+	     <div data-aos="flip-up" data-aos-duration="1000" class="abtBorder">
 		    <img class="borImg" src="img/saranya.jpg" width=100%>
 		 </div>
 		 </div>
 		    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-			<div data-aos="zoom-out-down" data-aos-duration="1000" class="abtSty mt-5">
+			<div data-aos="flip-down" data-aos-duration="1000" class="abtSty mt-5">
 			   <p><span>Birthday:</span>  1 September 2001</p>
 			   <p><span>Place:</span>Tenkasi</p>
 			   <p><span>Phone:</span> 8754668220</p>
