--- a/own-practice/review_task/ascending_descending.html
+++ b/own-practice/review_task/ascending_descending.html
@@ -9,60 +9,139 @@
 <body>
    <script>
    
-   // ascending descending
+     // compare height 
    
-   let num1=parseInt(prompt("enter a num1"));
-   let num2=parseInt(prompt("enter a num2"));
-   let num3=parseInt(prompt("enter a num3"));
+   <!-- let height=prompt("enter your height"); -->
    
-   if(num1 > num2 && num1 > num3){
-      if(num2 > num3){
-	     console.log("ascending: " + num3, num2, num1);
-		 console.log("descending:" + num1, num2, num3);
+   <!-- if(height <= 150){ -->
+      <!-- console.log("this person is short"); -->
+   <!-- } -->
+   <!-- else if(height > 150 && height <= 165){ -->
+      <!-- console.log("this person is medium height"); -->
+   <!-- } -->
+   <!-- else if(height > 165 && height <= 195){ -->
+      <!-- console.log("this person is tall"); -->
+   <!-- } -->
+   <!-- else if(height > 195){ -->
+      <!-- console.log("this person is to very tall"); -->
+   <!-- }-->
+   
+   
+   
+   // ascending descending 3input
+   
+   <!-- let num1=parseInt(prompt("enter a num1")); -->
+   <!-- let num2=parseInt(prompt("enter a num2")); -->
+   <!-- let num3=parseInt(prompt("enter a num3")); -->
+   
+   <!-- if(num1 > num2 && num1 > num3){ -->
+      <!-- if(num2 > num3){ -->
+	     <!-- console.log("ascending: " + num3, num2, num1); -->
+		 <!-- console.log("descending:" + num1, num2, num3); -->
+	  <!-- } -->
+	  <!-- else{ -->
+	     <!-- console.log("ascending:" + num2, num3, num1); -->
+		 <!-- console.log("descending:" + num1, num3, num2); -->
+	  <!-- } -->
+   <!-- } -->
+   <!-- else if(num2 > num1 && num2 > num3){ -->
+      <!-- if(num3 > num1){ -->
+	     <!-- console.log("ascending:" + num1, num3, num2); -->
+		 <!-- console.log("descending:" + num2, num3, num1); -->
+	  <!-- } -->
+	  <!-- else{ -->
+	     <!-- console.log("ascending:" + num3, num1, num2); -->
+		 <!-- console.log("descending:" + num2, num1, num3); -->
+	  <!-- } -->
+   <!-- } -->
+   <!-- else if(num3 > num1 && num3 > num2){ -->
+      <!-- if(num2 > num1){ -->
+	     <!-- console.log("ascending:" + num1, num2, num3); -->
+		 <!-- console.log("descending:" + num3, num2, num1); -->
+	  <!-- } -->
+	  <!-- else{ -->
+	     <!-- console.log("ascending:" + num2, num1, num3); -->
+		 <!-- console.log("descending:" + num1, num2, num3); -->
+	  <!-- } -->
+   <!-- } -->
+   
+   
+   // ascending_descending 4input
+   
+   let num1 = parseInt(prompt('enter num1'));
+   let num2 = parseInt(prompt('enter num2'));
+   let num3 = parseInt(prompt('enter num3'));
+   let num4 = parseInt(prompt('enter num4'));
+   
+   if(num1 > num2 && num1 > num3 && num1 > num4){
+      if(num2 > num3 && num2 > num4){
+	     if(num3 > num4){
+		    console.log('ascending:'+ num4, num3, num2, num1);
+			console.log('descending:'+ num1, num2, num3, num4);
+		 }
+		 else{
+		    console.log('ascending:'+ num3, num4, num2, num1);
+			console.log('descending:'+ num1, num2, num4, num3);
+		 }
 	  }
 	  else{
-	     console.log("ascending:" + num2, num3, num1);
-		 console.log("descending:" + num1, num3, num2);
+	     console.log('ascending:'+ num2, num3, num4, num1);
+		 console.log('descending:'+ num1, num4, num3, num2);
 	  }
    }
-   else if(num2 > num1 && num2 > num3){
-      if(num3 > num1){
-	     console.log("ascending:" + num1, num3, num2);
-		 console.log("descending:" + num2, num3, num1);
-	  }
-	  else{
-	     console.log("ascending:" + num3, num1, num2);
-		 console.log("descending:" + num2, num1, num3);
-	  }
-   }
-   else if(num3 > num1 && num3 > num2){
-      if(num2 > num1){
-	     console.log("ascending:" + num1, num2, num3);
-		 console.log("descending:" + num3, num2, num1);
+   else if(num2 > num1 && num2 > num3 && num2 > num4){
+      if(num3 > num1 && num3 > num4){
+	     if(num4 > num1){
+		    console.log('ascending:'+ num1, num4, num3, num2);
+			console.log('descending:'+ num2, num3, num4, num1);
+		 }
+		 else{
+		    console.log('ascending:'+ num4, num1, num3, num2);
+			console.log('descending:'+ num2, num3, num1, num4);
+		 }
 	  }
 	  else{
-	     console.log("ascending:" + num2, num1, num3);
-		 console.log("descending:" + num1, num2, num3);
+	     console.log('ascending:'+ num3, num4, num1, num2);
+		 console.log('descending:'+ num2, num1, num4, num3);
+	  }
+   }
+   
+   if(num3 > num1 && num3 > num2 && num3 > num4){
+      if(num4 > num1 && num4 > num2){
+	     if(num1 > num2){
+		    console.log('ascending:'+ num2, num1, num4, num3);
+			console.log('descending:'+ num3, num4, num1, num2);
+		 }
+		 else{
+		    console.log('ascending:' + num1, num2, num4, num3);
+			console.log('descending:'+ num3, num4, num2, num1);
+		 }
+	  }
+	  else{
+	     console.log('ascending:'+ num4, num1, num2, num3);
+		 console.log('descending:'+ num3, num2, num1, num4);
+	  }
+   }
+   else if(num4 > num1 && num4 > num2 && num4 > num3){
+      if(num1 > num2 && num1 > num3){
+	     if(num2 > num3){
+		    console.log('ascending:'+ num3, num2, num1, num4);
+			console.log('descending:'+ num4, num1, num2, num3);
+		 }
+		 else{
+		    console.log('ascending:'+ num2, num3, num1, num4);
+			console.log('descending:'+ num4, num1, num3, num2);
+		 }
+	  }
+	  else{
+	     console.log('ascending:'+ num1, num2, num3, num4);
+		 console.log('descending:'+ num4, num3, num2, num1);
 	  }
    }
    
    
-   // compare height
    
-   let height=prompt("enter your height");
    
-   if(height <= 150){
-      console.log("this person is short");
-   }
-   else if(height > 150 && height <= 165){
-      console.log("this person is medium height");
-   }
-   else if(height > 165 && height <= 195){
-      console.log("this person is tall");
-   }
-   else if(height > 195){
-      console.log("this person is to very tall");
-   }
    
    </script>
 </body>
