--- a/own-practice/review_task/month.html
+++ b/own-practice/review_task/month.html
@@ -9,47 +9,111 @@
 <body>
    <script>
    
-   var month=parseInt(prompt("enter a number"));
+   <!-- var month=parseInt(prompt("enter a number")); -->
    
-   switch(month){
-      case 1:
-	     console.log("January");
-	     break;
-	  case 2:
-	     console.log("february");
-	     break;
-	  case 3:
-	     console.log("March");
-	     break;
-	  case 4:
-	     console.log("April");
-	     break;
-	  case 5:
-	     console.log("May");
-	     break;
-	  case 6:
-	     console.log("June");
-	     break;
-	  case 7:
-	     console.log("July");
-	     break;
-	  case 8:
-	     console.log("August");
-	     break;
-	  case 9:
-	     console.log("September");
-	     break;
-	  case 10:
-	     console.log("October");
-	     break;
-	  case 11:
-	     console.log("November");
-	     break;
-	  case 12:
-	     console.log("December");
-	     break;
-   } 
+   <!-- switch(month){ -->
+      <!-- case 1: -->
+	     <!-- console.log("January"); -->
+	     <!-- break; -->
+	  <!-- case 2: -->
+	     <!-- console.log("february"); -->
+	     <!-- break; -->
+	  <!-- case 3: -->
+	     <!-- console.log("March"); -->
+	     <!-- break; -->
+	  <!-- case 4: -->
+	     <!-- console.log("April"); -->
+	     <!-- break; -->
+	  <!-- case 5: -->
+	     <!-- console.log("May"); -->
+	     <!-- break; -->
+	  <!-- case 6: -->
+	     <!-- console.log("June"); -->
+	     <!-- break; -->
+	  <!-- case 7: -->
+	     <!-- console.log("July"); -->
+	     <!-- break; -->
+	  <!-- case 8: -->
+	     <!-- console.log("August"); -->
+	     <!-- break; -->
+	  <!-- case 9: -->
+	     <!-- console.log("September"); -->
+	     <!-- break; -->
+	  <!-- case 10: -->
+	     <!-- console.log("October"); -->
+	     <!-- break; -->
+	  <!-- case 11: -->
+	     <!-- console.log("November"); -->
+	     <!-- break; -->
+	  <!-- case 12: -->
+	     <!-- console.log("December"); -->
+	     <!-- break; -->
+   <!-- }  -->
    
+   
+   // year_month_day
+   
+   let year=prompt('Enter year');
+   let month=prompt('Enter a number');
+   
+   if(month==1){
+      console.log('January');
+	  console.log('31 days');
+   }
+   else if(month==2){
+      console.log('February');
+      if(year%4==0){
+	     console.log('leap year');
+		 console.log('29 days');
+	  }
+	  else{
+	     console.log('not leap year');
+		 console.log('28 days');
+	  };
+   }
+   else if(month==3){
+      console.log('March');
+	  console.log('31 days');
+   }
+   else if(month==4){
+      console.log('April');
+	  console.log('30 days');
+   }
+   else if(month==5){
+      console.log('May');
+	  console.log('31 days');
+   }
+   else if(month==6){
+      console.log('June');
+	  console.log('30 days');
+   }
+   else if(month==7){
+      console.log('July');
+	  console.log('31 days');
+   }
+   else if(month==8){
+      console.log('August');
+	  console.log('30 days');
+   }
+   else if(month==9){
+      console.log('September');
+	  console.log('31 days');
+   }
+   else if(month==10){
+      console.log('October');
+	  console.log('30 days');
+   }
+   else if(month==11){
+      console.log('November');
+	  console.log('31 days');
+   }
+   else if(month==12){
+      console.log('December');
+	  console.log('30 days');
+   }
+   else{
+      console.log("enter 1 to 12 number only")
+   }
    
    
    
