--- a/own-practice/progress/progress.html
+++ b/own-practice/progress/progress.html
@@ -6,10 +6,13 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet"  href="progress.css">
 	<title>progress</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
  
- <div class="card col-12 col-sm-12 col-md-6 col-lg-6">
+ <div class="card">
+ <div class="col-12 col-sm-12 col-md-6 col-lg-6">
   <div class="percent">
     <svg>
       <circle cx="105" cy="105" r="100"></circle>
@@ -23,8 +26,10 @@
     <h2>HTML</h2>
   </div>
 </div>
+</div>
 
-<div class="card col-12 col-sm-12 col-md-8 col-lg-4">
+<div class="card">
+<div class="col-12 col-sm-12 col-md-6 col-lg-6">
   <div class="percent">
     <svg>
       <circle cx="105" cy="105" r="100"></circle>
@@ -38,8 +43,10 @@
     <h2>CSS</h2>
   </div>
 </div>
+</div>
 
-<div class="card col-12 col-sm-12 col-md-8 col-lg-4">
+<div class="card">
+<div class="col-12 col-sm-12 col-md-6 col-lg-6">
   <div class="percent">
     <svg>
       <circle cx="105" cy="105" r="100"></circle>
@@ -52,6 +59,7 @@
   <div class="title">
     <h2>JavaScript</h2>
   </div>
+</div>
 </div>
 
 </body>
