--- a/own-practice/review_task/ascending_descending.html
+++ b/own-practice/review_task/ascending_descending.html
@@ -106,7 +106,7 @@
 	  }
    }
    
-   if(num3 > num1 && num3 > num2 && num3 > num4){
+   else if(num3 > num1 && num3 > num2 && num3 > num4){
       if(num4 > num1 && num4 > num2){
 	     if(num1 > num2){
 		    console.log('ascending:'+ num2, num1, num4, num3);
