--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -49,8 +49,8 @@
       <section class="row">
 	     <div class=" col-12 col-sm-6 col-md-6 col-lg-6">
 	     <div class="navCont">
-		    <h1>It's me <span class="saran">Saranya</span></h1>
-			<h2>Frontend Developer</h2>
+		    <h1 data-aos="zoom-in" data-aos-duration="500">It's me <span class="saran">Saranya</span></h1>
+			<h2 data-aos="zoom-in" data-aos-duration="2000">Frontend Developer</h2>
 		 </div>
 		 </div>
 		 <div class="col-12 col-sm-6 col-md-6 col-lg-6">
@@ -65,7 +65,7 @@
 </section>
 <section class="about" id="about">
    <section class="container">
-      <section>
+      <section data-aos="fade-down" data-aos-duration="1000">
 	     <div class="abt">
 		    <h2>About</h2>
 		 </div>
@@ -91,11 +91,11 @@
 </section>
 <section class="about," id="skill">
    <section class="container">
-      <section data-aos="flip-left" data-aos-duration="1000">
+      <section data-aos="fade-down" data-aos-duration="1000">
 	     <div class="abt">
 		    <h2>Skill</h2>
 		 </div>
-		 <div>
+		 <div data-aos="flip-left" data-aos-duration="1000">
          <div class="progress">
 		    <label>HTML:</label>
             <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-label="Info striped example" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -114,7 +114,7 @@
 </section>
 <section class="resume" id="resume">
    <section class="container">
-      <section class="resumeIn">
+      <section class="resumeIn" data-aos="fade-down" data-aos-duration="1000">
 			<div>
 			   <h2>Resume</h2>
 			</div>
@@ -154,7 +154,7 @@
 </section>
 <section class="project" id="pro">
    <section class="container">
-      <section class="projectIn">
+      <section class="projectIn" data-aos="fade-down" data-aos-duration="1000">
 	     <div>
 		    <h2>My Project</h2>
 		 </div>
@@ -164,7 +164,7 @@
      data-aos-duration="2000" class="portImg">
 			     <img src="img/port2.jpg" width=100%>
 				 <div class="portCont">
-				    <a href="file:///D:/Fabevy/practice-01/boostrap/ninestar/ninestar.html" target="-blank">BOOSTRAP</a>
+				    <a href="file:///D:/Fabevy/practice-01/boostrap/ninestar/ninestar.html" target="-blank">BOOTSTRAP</a>
 					<p>Ninestars is a free Bootstrap HTML5 portfolio website template for showcasing products, services, personal, or organizational portfolios.</p>
 				 </div>
 			  </div>
@@ -207,7 +207,7 @@
 </section>
 <section class="contactOut" id="contact">
    <section class="container">
-      <section class="contactIn">
+      <section class="contactIn" data-aos="fade-down" data-aos-duration="1000">
 	     <div class="contHead">
 		    <h2>contact</h2>
 		 </div>
