--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="#pro">Project</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="#contact">contact</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -51,6 +51,7 @@
 	     <div class="navCont">
 		    <h1 data-aos="zoom-in" data-aos-duration="500">It's me <span class="saran">Saranya</span></h1>
 			<h2 data-aos="zoom-in" data-aos-duration="2000">Frontend Developer</h2>
+			<a class="git" data-aos="zoom-in" data-aos-duration="2000" href="https://github.com/saranyakpr" target="_blank"><iconify-icon icon="logos:github-octocat"></iconify-icon>GitHub</a>
 		 </div>
 		 </div>
 		 <div class="col-12 col-sm-6 col-md-6 col-lg-6">
@@ -77,11 +78,11 @@
 		 </div>
 		    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
 			<div data-aos="flip-down" data-aos-duration="1000" class="abtSty mt-5">
-			   <p><span>Birthday:</span>  1 September 2001</p>
+			   <p><span>Birthday:</span>  1st September 2001</p>
 			   <p><span>Place:</span>Tenkasi</p>
 			   <p><span>Phone:</span> 8754668220</p>
 				<p><span>Age:</span> 21</p>
-				<p><span>Degree:</span> B.Sc</p>
+				<p><span>Degree:</span> B.Sc(physics)</p>
 				<p><span>Email:</span> saranjokpr@gmail.com</p>
 			</div>
 			</div>
@@ -95,19 +96,37 @@
 	     <div class="abt">
 		    <h2>Skill</h2>
 		 </div>
-		 <div data-aos="flip-left" data-aos-duration="1000">
-         <div class="progress">
-		    <label>HTML:</label>
-            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" aria-label="Info striped example" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-         </div>
-         <div class="progress">
-		    <label>CSS:</label>
-            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" aria-label="Warning striped example" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-         </div>
-         <div class="progress">
-		    <label>JAVASCRIPT:</label>
-            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" aria-label="Danger striped example" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-         </div>
+		 <div class="bar" data-aos="flip-left" data-aos-duration="1000">
+         <div class="row">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+        <h2><iconify-icon icon="vscode-icons:file-type-html"></iconify-icon>HTML</h2>
+        <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+      </div><br>
+	    <h2><iconify-icon icon="logos:javascript"></iconify-icon>Javascript</h2>
+	    <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+      </div><br>
+	   <h2><iconify-icon icon="vscode-icons:file-type-reactjs"></iconify-icon>React</h2>
+	   <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+      </div><br>
+   </div>
+   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+      <h2><iconify-icon icon="vscode-icons:file-type-css"></iconify-icon>CSS</h2>
+      <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+      </div><br>
+	    <h2><iconify-icon icon="logos:bootstrap"></iconify-icon>BOOTSTRAP</h2>
+	    <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+      </div><br>
+	   <h2><iconify-icon icon="material-symbols:keyboard-alt-outline-rounded"></iconify-icon>Type Writting</h2>
+	   <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100" style="width: 99%"></div>
+      </div><br>
+   </div>
+</div>
 		 </div>
 	  </section>
    </section>
@@ -161,7 +180,7 @@
 		 <div class="row">
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
 		      <div data-aos="zoom-in-up"
-     data-aos-duration="2000" class="portImg">
+     data-aos-duration="1000" class="portImg">
 			     <img src="img/port2.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/boostrap/ninestar/ninestar.html" target="-blank">BOOTSTRAP</a>
@@ -171,7 +190,7 @@
 		   </div>
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
 		      <div data-aos="zoom-in-up"
-     data-aos-duration="2000" class="portImg">
+     data-aos-duration="1500" class="portImg">
 			     <img src="img/port3.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/daily%20task/mamba/mamba.html" target="-blank">HTML & CSS</a>
@@ -193,7 +212,7 @@
 		   </div>
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
 		      <div data-aos="zoom-in-up"
-     data-aos-duration="2000" class="portImg">
+     data-aos-duration="2500" class="portImg">
 			     <img src="img/port4.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/daily-task/saranya/saranya.html" target="-blank">HTML & CSS</a>
@@ -209,7 +228,7 @@
    <section class="container">
       <section class="contactIn" data-aos="fade-down" data-aos-duration="1000">
 	     <div class="contHead">
-		    <h2>contact</h2>
+		    <h2>Contact</h2>
 		 </div>
 	     <div class="row">
 		    <div class="col-12 col-sm-12 col-md-6 col-lg-4">
@@ -220,7 +239,7 @@
 			</div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-6 col-lg-4">
-			  <div data-aos="zoom-out-down" data-aos-duration="1000" class="cont">
+			  <div data-aos="zoom-out-down" data-aos-duration="2000" class="cont">
 			     <iconify-icon class="contIcon" icon="material-symbols:mail-outline-sharp"></iconify-icon>
 			     <h3>Email Us</h3>
 				 <p>saranjokpr@gmail</p>
@@ -228,7 +247,7 @@
 			  </div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-6 col-lg-4 call">
-			  <div data-aos="zoom-out-down" data-aos-duration="1000" class="cont">
+			  <div data-aos="zoom-out-down" data-aos-duration="3000" class="cont">
 			     <iconify-icon class="contIcon" icon="ic:baseline-call"></iconify-icon>
 			     <h3>Call Us</h3>
 				 <p>+91 8754668220</p>
