--- a/own-practice/progress/progress.html
+++ b/own-practice/progress/progress.html
@@ -4,62 +4,49 @@
     <meta charset="UTF-8">
 	<meta http-eqiv="X-UA-compatible" content="IE=Rdge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet"  href="progress.css">
+    <!-- <link rel="stylesheet"  href="progress.css"> -->
 	<title>progress</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
+	
+	
 </head>
 <body>
- 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<section class="container">
 <div class="row">
-<div class=" col-12 col-sm-12 col-md-8 col-lg-4">
- <div class="card">
-  <div class="percent">
-    <svg>
-      <circle cx="105" cy="105" r="100"></circle>
-      <circle cx="105" cy="105" r="100" style="--percent: 30"></circle>
-    </svg>
-    <div class="number">
-      <h3>30<span>%</span></h3>
-    </div>
-  </div>
-  <div class="title">
-    <h2>HTML</h2>
-  </div>
+   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+      <h2><iconify-icon icon="vscode-icons:file-type-html"></iconify-icon>HTML</h2>
+      <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+      </div><br>
+	    <h2><iconify-icon icon="logos:javascript"></iconify-icon>Javascript</h2>
+	    <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+      </div><br>
+	   <h2><iconify-icon icon="vscode-icons:file-type-reactjs"></iconify-icon>React</h2>
+	   <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+      </div><br>
+   </div>
+   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+      <h2><iconify-icon icon="vscode-icons:file-type-css"></iconify-icon>CSS</h2>
+      <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+      </div><br>
+	    <h2><iconify-icon icon="logos:bootstrap"></iconify-icon>BOOTSTRAP</h2>
+	    <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+      </div><br>
+	   <h2><iconify-icon icon="material-symbols:keyboard-alt-outline-rounded"></iconify-icon>Type Writting</h2>
+	   <div class="progress">
+         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+      </div><br>
+   </div>
+   
 </div>
-</div>
+</section>
 
-<div class=" col-12 col-sm-12 col-md-8 col-lg-4">
-<div class="card">
-  <div class="percent">
-    <svg>
-      <circle cx="105" cy="105" r="100"></circle>
-      <circle cx="105" cy="105" r="100" style="--percent: 70"></circle>
-    </svg>
-    <div class="number">
-      <h3>70<span>%</span></h3>
-    </div>
-  </div>
-  <div class="title">
-    <h2>CSS</h2>
-  </div>
-</div>
-</div>
 
-<div class=" col-12 col-sm-12 col-md-8 col-lg-4">
-<div class="card">
-  <div class="percent">
-    <svg>
-      <circle cx="105" cy="105" r="100"></circle>
-      <circle cx="105" cy="105" r="100" style="--percent: 90"></circle>
-    </svg>
-    <div class="number">
-      <h3>90<span>%</span></h3>
-    </div>
-  </div>
-  <div class="title">
-    <h2>JavaScript</h2>
-  </div>
-</div>
-</div>
-</div>
 </body>
 </html>
