--- a/boostrap/ninestar/ninestar.html
+++ b/boostrap/ninestar/ninestar.html
@@ -25,16 +25,16 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="#abt">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link" href="#ser">Services</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="#">Portfolio</a>
+          <a class="nav-link" href="#port">Portfolio</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="#">Team</a>
+          <a class="nav-link" href="#teams">Team</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,7 +49,7 @@
           </ul>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#cont">Contact</a>
         </li>
       </ul>
 	  <ul class="btn">
@@ -73,7 +73,7 @@
 		</section>
 	 </section>
   </section>
-  <section class="about">
+  <section class="about" id="abt">
      <section class="container">
 	    <section class="row">
 		   <div class="col-12 col-sm-12 col-md-12 col-lg-6">
@@ -102,7 +102,7 @@
 		</section>
 	 </section>
   </section>
-  <section class="services">
+  <section class="services" id="ser">
      <section class="container">
 	    <section>
 		   <div class="servicesHead">
@@ -134,7 +134,7 @@
 		</section>
 	 </section>
   </section>
-  <section class="portfolio">
+  <section class="portfolio" id="port">
      <section class="container">
 	    <section>
 		   <div class="portHead">
@@ -318,7 +318,7 @@
 			</div>
 		</div>
 	</section>
-  <section class="team">
+  <section class="team" id="teams">
      <section class="container">
 	    <section>
 		   <div class="row teamCont">
@@ -421,7 +421,7 @@
 	 </section>
   </section>
   <section>
-	    <div class="container">
+	    <div class="container" id="cont">
 		    <div class="contact">
 				<h3>Contact Us</h3>
 				<h2>Contact us the get started</h2>
