--- a/js/task/calculator/calculator.html
+++ b/js/task/calculator/calculator.html
@@ -29,7 +29,7 @@
 		 <button onclick="display('+')">+</button>
 		 <button onclick="display('.')">.</button>
 		 <button onclick="display(0)">0</button>
-		 <button class="equal" onclick="calculate()">=</button>
+		 <button id="equal" onclick="calculate()">=</button>
 	  </section>
    </section>
    <script>
