--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" id="solo" href="#">Home</a>
+          <a class="nav-link" id="solo" href="#home">Home</a>
         </li>
 		<li class="nav-item">
           <a class="nav-link" href="#about">About</a>
@@ -44,7 +44,7 @@
     </div>
   </div>
 </nav>
-<section class="banner">
+<section class="banner" id="home">
    <section class="container">
       <section class="row">
 	     <div class=" col-12 col-sm-6 col-md-6 col-lg-6">
