--- a/boostrap/ninestar/ninestar.html
+++ b/boostrap/ninestar/ninestar.html
@@ -9,6 +9,9 @@
 	<script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Ninestar</title>
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<link rel="stylesheet" href="owlCarousel/owl.carousel.min.css">
+	<link rel="stylesheet" href="owlCarousel/owl.theme.default.min.css">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -22,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown" p=1rem;>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#abt">About Us</a>
@@ -59,11 +62,11 @@
   </div>
 </nav>
 </div>
-  <section class="digital">
+  <section class="digital" id="home">
      <section class="container">
 	    <section class="row head">
 		   <div  class="col-12 col-sm-12 col-md-12 col-lg-6 mt-4">
-		      <h2>Bettter digital experience with Ninestar</h2>
+		      <h3>Bettter digital experience with Ninestar</h3>
 			  <p>We are team of talented designers making websites with Bootstrap</p>
 			  <button class="get">Get Started</button>
 		   </div>
@@ -76,22 +79,22 @@
   <section class="about" id="abt">
      <section class="container">
 	    <section class="row">
-		   <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+		   <div class="col-12 col-sm-12 col-md-12 col-lg-6" data-aos="zoom-in" data-aos-duration="1000">
 		      <img src="img/about.svg" width=100%> 	
 		   </div>
-		   <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+		   <div class="col-12 col-sm-12 col-md-12 col-lg-6" data-aos="fade-up" data-aos-duration="1000">
 		      <div class="paraHead">
 			     <h2>Voluptatem dignissimos provident quasi</h2>
 				 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
 			  </div>
 			  <div class="abtPara">
 			  <div class="row">
-			     <div class="col-md-6">
+			     <div class="col-md-6" data-aos="fade-up" data-aos-duration="2000">
 				    <iconify-icon class="abticon" icon="bx:receipt"></iconify-icon>
 				    <h3>Corporis voluptates sit</h3>
 					<p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
 				 </div>
-				 <div class="col-md-6">
+				 <div class="col-md-6" data-aos="fade-up" data-aos-duration="2000">
 				    <iconify-icon class="abticon" icon="bx:cube-alt"></iconify-icon>
 				    <h3>Ullamco laboris nisi</h3>
 					<p>Excepteur sint occaecat cupidatat non proident. sunt in culpa qui officia deserunt</p>
@@ -102,7 +105,7 @@
 		</section>
 	 </section>
   </section>
-  <section class="services" id="ser">
+  <section class="services" id="ser" data-aos="fade-up" data-aos-duration="1000">
      <section class="container">
 	    <section>
 		   <div class="servicesHead">
@@ -110,22 +113,22 @@
 			  <h2>Check out the great services we offer</h2>
 		   </div>
 		   <div class="row">
-		      <div class="serCont col-md-6 col-lg-3">
+		      <div class="serCont col-md-6 col-lg-3" data-aos="zoom-in" data-aos-duration="1000">
 			     <iconify-icon class="serIcon" icon="bxl:dribbble"></iconify-icon>
 			     <h4>Lorem Ipsum</h4>
 				 <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
 			  </div>
-			  <div class="serCont col-md-6 col-lg-3">
+			  <div class="serCont col-md-6 col-lg-3" data-aos="zoom-in" data-aos-duration="1000">
 			     <iconify-icon class="serIcon" icon="bx:file"></iconify-icon>
 			     <h4>Sed ut perspiciatis</h4>
 				 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
 			  </div>
-			  <div class="serCont col-md-6 col-lg-3">
+			  <div class="serCont col-md-6 col-lg-3" data-aos="zoom-in" data-aos-duration="1000">
 			     <iconify-icon class="serIcon" icon="bx:tachometer"></iconify-icon>
 			     <h4>Magni Dolores</h4>
 				 <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim</p>
 			  </div>
-			  <div class="serCont col-md-6 col-lg-3">
+			  <div class="serCont col-md-6 col-lg-3" data-aos="zoom-in" data-aos-duration="1000">
 			     <iconify-icon class="serIcon" icon="bx:world"></iconify-icon>
 			     <h4>Nemo Enim</h4>
 				 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
@@ -136,7 +139,7 @@
   </section>
   <section class="portfolio" id="port">
      <section class="container">
-	    <section>
+	    <section data-aos="fade-up" data-aos-duration="1000">
 		   <div class="portHead">
 		      <h3>Portfolio</h3>
 			  <h2>Check out our beautifull portfolio</h2>
@@ -147,7 +150,7 @@
 			  <a href="#" class="portLink">Web</a>
 			  </div>
 		   </div>
-		   <div class="row">
+		   <div class="row" data-aos="fade-up" data-aos-duration="2000">
 		      <div class="col-md-6 col-lg-4 imgs">
 			     <img src="img/portfolio-1.jpg">
 					   <div class="portIcon row p-5">
@@ -248,13 +251,13 @@
 		</section>
 	 </section>
   </section>
-  <section class="section5 pt-5">
+  <section class="section5 pt-5" data-aos="fade-up" data-aos-duration="1000">
 	    <div class="container">
 		    <div class="service">
 				<h6 class="text-secondary">F.A.Q</h6>
 				<h2 class="pri">Frequently Asked Questions</h2>
 		    </div>
-		    <div class="accordion accordion-flush mt-5" id="accordionFlushExample">
+		    <div class="accordion accordion-flush mt-5" id="accordionFlushExample" data-aos="fade-up" data-aos-duration="2000">
 				<div class="accordion-item">
 					<h2 class="accordion-header" id="flush-headingOne">
 					  <button class="accordion-button collapsed text-black" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -320,14 +323,14 @@
 	</section>
   <section class="team" id="teams">
      <section class="container">
-	    <section>
+	    <section data-aos="fade-up" data-aos-duration="1000">
 		   <div class="row teamCont">
 		      <h3>Team</h3>
 			  <h2>Our team is always here to help</h2>
 		   </div>
 		   <div class="row">
 		      <div class="col-md-6 col-lg-3">
-			     <div class="teamImg"> 
+			     <div class="teamImg" data-aos="zoom-in" data-aos-duration="1000"> 
 			     <img src="img/team-1.jpg">
 				    <div class="teamName">
 					   <h1>Walter White</h1>
@@ -342,7 +345,7 @@
 					</div>
 			  </div>
 			  <div class="col-md-6 col-lg-3">
-			     <div class="teamImg">
+			     <div class="teamImg" data-aos="zoom-in" data-aos-duration="1000">
 			     <img src="img/team-2.jpg">
 				    <div class="teamName">
 					   <h1>Sarah Jhonson</h1>
@@ -357,7 +360,7 @@
 					</div>
 			  </div>
 			  <div class="col-md-6 col-lg-3">
-			     <div class="teamImg">
+			     <div class="teamImg" data-aos="zoom-in" data-aos-duration="1000">
 			     <img src="img/team-3.jpg">
 				    <div class="teamName">
 					   <h1>William Anderson</h1>
@@ -372,7 +375,7 @@
 					</div>
 			  </div>
 			  <div class="col-md-6 col-lg-3">
-			     <div class="teamImg">
+			     <div class="teamImg" data-aos="zoom-in" data-aos-duration="1000">
 			     <img src="img/team-4.jpg">
 				    <div class="teamName">
 					   <h1>Amanda Jepson</h1>
@@ -390,10 +393,10 @@
 		</section>
 	 </section>
   </section>
-  <section class="client">
+  <section class="client" data-aos="fade-up" data-aos-duration="1000">
      <section class="container">
 	    <section class="clientCont">
-	    <div>
+	    <div data-aos="fade-up" data-aos-duration="2000">
 		      <h3>Clients</h3>
 			  <h2>They trusted us</h2>
 		   <div class="row">
@@ -420,7 +423,7 @@
 		</section>
 	 </section>
   </section>
-  <section>
+  <section data-aos="fade-up" data-aos-duration="1000">
 	    <div class="container" id="cont">
 		    <div class="contact">
 				<h3>Contact Us</h3>
@@ -494,7 +497,7 @@
 				</div>
 		</div>
 	</section>
-	<section class="section10">
+	<section class="adSolcial">
 	    <div class="container">
 		    <div class="row mt-5">
 			    <div class="col-sm-12 col-md-6 col-lg-3">
@@ -539,12 +542,12 @@
 							<i class="fa fa-skype" aria-hidden="true"></i>
 				            <i class="fa fa-linkedin" aria-hidden="true"></i>
 				        </div>      
-					</div>
+					</div>	
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="section12">
+	<section class="over">
 	    <div class="container">
 		    <div class="row pt-5">
 			    <div class="row">
@@ -560,5 +563,10 @@
 			</div>
 		</div>
 	</section>
+	
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>	
   </body>
 </html>
