--- a/daily task/mamba/mamba.html
+++ b/daily task/mamba/mamba.html
@@ -49,7 +49,7 @@
 				<a href="">Contact</a>
 			</div>
 			<div class="head-mobileview">
-				<i class="bi bi-list"></i>	
+				<i id="burger" class="bi bi-list"></i>	
 			</div>
 		</div>
 	</div>
@@ -535,5 +535,21 @@
 		</div>
 	</div>
 </section>
+
+
+
+<script>
+   let burger = getElementById("burger");
+   burger.addEventListener("click", myFunction);
+   
+   function myFunction(){
+      
+   }
+   
+
+
+
+
+</script>
 </body>
 </html>
