--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -51,6 +51,8 @@
 	     <div class="navCont">
 		    <h1 data-aos="zoom-in" data-aos-duration="500">It's me <span class="saran">Saranya</span></h1>
 			<h2 data-aos="zoom-in" data-aos-duration="2000">Frontend Developer</h2>
+			<a class="git" data-aos="zoom-in" data-aos-duration="2000" href="https://github.com/saranyakpr" target="_blank"><iconify-icon class="navLogo" icon="ion:logo-linkedin"></iconify-icon>LinkedIn</a>
+			<iconify-icon class="navLogo" icon="material-symbols:download-for-offline-rounded"></iconify-icon>
 			<a class="git" data-aos="zoom-in" data-aos-duration="2000" href="https://github.com/saranyakpr" target="_blank"><iconify-icon icon="logos:github-octocat"></iconify-icon>GitHub</a>
 		 </div>
 		 </div>
