--- a/boostrap/ninestar/ninestar.html
+++ b/boostrap/ninestar/ninestar.html
@@ -65,12 +65,12 @@
   <section class="digital" id="home">
      <section class="container">
 	    <section class="row head">
-		   <div  class="col-12 col-sm-12 col-md-12 col-lg-6 mt-4">
+		   <div  class="col-12 col-sm-12 col-md-12 col-lg-6 mt-4 order-1 order-lg-0">
 		      <h3>Bettter digital experience with Ninestar</h3>
 			  <p>We are team of talented designers making websites with Bootstrap</p>
 			  <button class="get">Get Started</button>
 		   </div>
-		   <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+		   <div class="col-12 col-sm-12 col-md-12 col-lg-6 order-0 order-lg-1">
 		      <img src="img/hero.svg" width=100%>
 		   </div>
 		</section>
@@ -395,34 +395,65 @@
   </section>
   <section class="client" data-aos="fade-up" data-aos-duration="1000">
      <section class="container">
-	    <section class="clientCont">
+	    <section class="clientCont"> 
 	    <div data-aos="fade-up" data-aos-duration="2000">
 		      <h3>Clients</h3>
 			  <h2>They trusted us</h2>
-		   <div class="row">
-		      <div class="col-lg-2 col-md-3 col-sm-8 clientImg">
-			     <img src="img/client-1.png" width=100%>
-			  </div>
-			  <div class="col-lg-2 col-md-3 col-sm-8 clientImg">
-			     <img src="img/client-2.png" width=100%>
-			  </div>
-			  <div class="col-lg-2 col-md-3 col-sm-8 clientImg">
-			     <img src="img/client-3.png" width=100%>
-			  </div>
-			  <div class="col-lg-2 col-md-3 col-sm-8 clientImg">
-			     <img src="img/client-6.png" width=100%>
-			  </div>
-			  <div class="col-lg-2 col-md-3 col-sm-8 clientImg">
-			     <img src="img/client-7.png" width=100%>
-			  </div>
-			  <div class="col-lg-2 col-md-3 col-sm-8 clientImg">
-			     <img src="img/client-8.png" width=100%>
-			  </div>
-		   </div>
-		 </div>
+		      <div class="owl-carousel brand carousel owl-theme pt-5">
+				<div class="team-play items">
+					<img src="img/client-1.png">
+				</div>
+				<div class="team-play items">
+					<img src="img/client-2.png">
+				</div>
+				<div class="team-play items">
+					<img src="img/client-3.png">
+				</div>
+				<div class="team-play items">
+					<img src="img/client-4.png">
+				</div>
+				<div class="team-play items">
+					<img src="img/client-5.png">
+				</div>
+				<div class="team-play items">
+					<img src="img/client-6.png">
+				</div>
+				<div class="team-play items">
+					<img src="img/client-7.png">
+				</div>
+				<div class="team-play items">
+					<img src="img/client-8.png">
+				</div>
+			</div>
 		</section>
 	 </section>
   </section>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+			<script src="owlCarousel/owl.carousel.min.js"></script>
+			<script>
+				$('.brand').owlCarousel({
+					loop: true,
+					margin: 10,
+					nav: true,
+					autoplay: true,
+					autoplayTimeout: 4000,
+					autoplayHoverPause: true,
+					responsive: {
+						0:{
+							items: 1
+						},
+						600:{
+							items: 3
+						},
+						1000:{
+							items: 6
+						}
+					}
+				})
+			</script>
+			<script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>	
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   <section data-aos="fade-up" data-aos-duration="1000">
 	    <div class="container" id="cont">
 		    <div class="contact">
