--- a/boostrap/ninestar/ninestar.html
+++ b/boostrap/ninestar/ninestar.html
@@ -15,22 +15,22 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<div class="topNav">
-         <nav class= "navbar navbar-expand-lg navbar-light bg-light">
+	
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="#">Ninestars</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown" p=1rem;>
-      <ul class="navbar-nav">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#abt">About Us</a>
         </li>
-        <li class="nav-item">
+		<li class="nav-item">
           <a class="nav-link" href="#ser">Services</a>
         </li>
 		<li class="nav-item">
@@ -40,10 +40,10 @@
           <a class="nav-link" href="#teams">Team</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Drop Down
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Drop Down 1</a></li>
             <li><a class="dropdown-item" href="#" >Deep Drop Down</a></li>
             <li><a class="dropdown-item" href="#">Drop Down 2</a></li>
@@ -51,8 +51,8 @@
 			<li><a class="dropdown-item" href="#">Drop Down 4</a></li>
           </ul>
         </li>
-		<li class="nav-item">
-          <a class="nav-link" href="#cont">Contact</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#cont" >Contact</a>
         </li>
       </ul>
 	  <ul class="btn">
@@ -61,7 +61,6 @@
     </div>
   </div>
 </nav>
-</div>
   <section class="digital" id="home">
      <section class="container">
 	    <section class="row head">
@@ -454,7 +453,7 @@
 			<script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>	
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-  <section data-aos="fade-up" data-aos-duration="1000">
+  <section class="con" data-aos="fade-up" data-aos-duration="1000">
 	    <div class="container" id="cont">
 		    <div class="contact">
 				<h3>Contact Us</h3>
