--- a/daily task/task/resume/resume.html
+++ b/daily task/task/resume/resume.html
@@ -62,7 +62,7 @@
 		 <div class="project">
 		    <div>
 		       <h2>Personal Portfolio Development</h2>
-		       <a class="link">https://github.com/saranyakpr/practice-01/commits?author=saranyakpr</a>
+		       <a class="link">file:///D:/Fabevy/practice-01/boostrap/itsMe/itsMe.html</a>
 		    </div>
 			<hr>
 			<div>
