--- a/react/callback.html
+++ b/react/callback.html
@@ -9,17 +9,17 @@
 <body>
    <script>
    // callback function
-   function funOne(){
-      console.log("first");
-	  console.log("fourth");
-   }
+   <!-- function funOne(){ -->
+      <!-- console.log("first"); -->
+	  <!-- console.log("fourth"); -->
+   <!-- } -->
    
-   function funTwo(fO){
-      console.log("second");
-	  fO();
-	  console.log("third");
-   }
-   funTwo(funOne);
+   <!-- function funTwo(fO){ -->
+      <!-- console.log("second"); -->
+	  <!-- fO(); -->
+	  <!-- console.log("third"); -->
+   <!-- } -->
+   <!-- funTwo(funOne); -->
    
    
    
