--- a/boostrap/ninestar/ninestar.html
+++ b/boostrap/ninestar/ninestar.html
@@ -16,51 +16,51 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="#">Ninestars</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#abt">About Us</a>
-        </li>
-		<li class="nav-item">
-          <a class="nav-link" href="#ser">Services</a>
-        </li>
-		<li class="nav-item">
-          <a class="nav-link" href="#port">Portfolio</a>
-        </li>
-		<li class="nav-item">
-          <a class="nav-link" href="#teams">Team</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Drop Down 1</a></li>
-            <li><a class="dropdown-item" href="#" >Deep Drop Down</a></li>
-            <li><a class="dropdown-item" href="#">Drop Down 2</a></li>
-			<li><a class="dropdown-item" href="#">Drop Down 3</a></li>
-			<li><a class="dropdown-item" href="#">Drop Down 4</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#cont" >Contact</a>
-        </li>
-      </ul>
-	  <ul class="btn">
-        <button class="button">Get Started</button>
-      </ul>
-    </div>
-  </div>
-</nav>
+	<section id="header">
+		<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-2">
+			<div class="container">
+				<a class="navbar-brand fs-2 secondary-color" href="#">Ninestars</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						<li class="nav-item ">
+							<a class="nav-link active pri-color" aria-current="home" href="#">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#abt">About Us</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#ser">Services</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#port">Portfolio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#teams">Team</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Dropdown
+							</a>
+								<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+									<li><a class="dropdown-item" href="#">Dropdown1</a></li>
+									<li><a class="dropdown-item" href="#">Dropdown2</a></li>
+									<li><a class="dropdown-item" href="#">Dropdown3</a></li>
+									<li><a class="dropdown-item" href="#">Dropdown4</a></li>
+									<li><a class="dropdown-item" href="#">Dropdown5</a></li>
+								</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#cont">Contact</a>
+						</li>
+						<button type="button" class="btn btn-danger rounded-pill pri-bg">Get Started</button>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</section>
   <section class="digital" id="home">
      <section class="container">
 	    <section class="row head">
