--- a/own-practice/task/star.html
+++ b/own-practice/task/star.html
@@ -54,6 +54,21 @@
 	 
 	
 	
+
+	   var num = 4,
+	   str = "";
+	    
+	   for(i=1; i<=num; i++){
+	      for(j=1; j<=num-i; j++){
+		     str+=" "
+		  }
+		  for(k=0; k<2*i-1; k++){
+		     str+="*"
+		  }
+		str+="\n";	
+	   }
+	   console.log(str);
+	   
 	
    </script>
 </body>
