--- a/js/task/prototype.html
+++ b/js/task/prototype.html
@@ -52,7 +52,7 @@
 	  
 	  // splice
 	  flowers=["rose", "lotus", "lilly", "sunflower"];
-	  flowers.splice(3,2);
+	  flowers.splice(2,3);
 	  console.log(flowers);
 	  
 	  // pop
@@ -70,7 +70,6 @@
 	  // revers
 	  flowers=["rose", "lotus", "lilly", "sunflower"];
 	  flower=flowers.reverse();
-	  console.log(flowers);
 	  console.log(flower);
 	  
 	  // indexOf
@@ -85,14 +84,31 @@
 	  console.log(flower);
 	  
 	  // sort
-	  nums=[1, 11, 21, 110];
-	  num=nums.sort();
+	  let nums=[1, 11, 21, 110];
+	  let num=nums.sort();
 	  console.log(num);
 	  
+	  // slice
+	  {const fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
+      const fruit = fruits.slice(1, 3);
+	  console.log(fruit); }
 	  
+	  // join
+	  {const fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
+      const fruit = fruits.join(' ');
+	  console.log(fruit); }
 	  
+	  // reduce
+	  {var number = [1,2,3,4,5]
+	   var res= number.reduce(function(pre,cur){
+	   var sum=(pre+cur);
+	   return sum;
+	  })
+	   console.log(res);
+	   }
 	  
-   
+	  // filter find includes 
+	  
    
    </script>
 </body>
