--- a/react/call_bind_apply.html
+++ b/react/call_bind_apply.html
@@ -23,12 +23,12 @@
    
    // call
    
-   let person2={
-          name:"saranya",
-		  age:21,
-		  profession:"developer"
-   }
-   person.getName.call(person2,'raja');   
+   <!-- let person2={ -->
+          <!-- name:"saranya", -->
+		  <!-- age:21, -->
+		  <!-- profession:"developer" -->
+   <!-- } -->
+   <!-- person.getName.call(person2,'raja');    -->
    
    
    
